--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -1,82 +1,108 @@
 body{
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-}
-
-.sidebar{
-    position: fixed;
-    top: 0;
-    width:  15vw;
-    height: 100vh;
-    box-sizing: border-box;
-    background-color: lightgray;
-}
-
-.inputButtons{
-    box-sizing: border-box;
-    margin-top: 2em;
+    color: rgb(55,56,103);    
 }
 
 nav div input{
-    margin-left: 1em;
-    margin-bottom: 1em;
-    padding-left: 5px;
     width: 13vw;
-    height: 2em;
+    height: 30px;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    padding-left: 5px;
     border: none;
     border-radius: 5px;
     color: lightgray;
 }
 
+header{
+    width: 1400px;
+    height: 100px;
+    font-size: 40px;
+    color: rgb(55,56,103);
+    font-weight: bold;
+    border-bottom: 5px solid rgb(55,56,103);
+}
+
+button:active{
+    transform: scale(1.1);
+}
+
+.sidebar{
+    position: fixed;
+    width:  290px;
+    height: 937px;
+    top: 0;
+    background-color: lightgray;
+}
+
+.inputButtons{
+    margin-top: 30px;
+}
+
 .buttons{
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 20px;
     text-align: center;
 }
 
 .buttons button{
+    width: 100px;
+    height: 35px;
+    display: inline-block;
+    padding: 10px 14px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
+    background-color: rgb(73,163,123);
     color: white;
-    padding: 5px 14px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    font-size: 0.8em;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+#button-2{
+    background-color: rgb(55,56,103);
 }
 
 .titles{
-    margin: 1em;
+    display: block;
+    width: 220px;
+    margin: 15px;
+    padding-bottom: 10px;
     text-transform: uppercase;
     font-weight: bold;
+    border-bottom: 2px solid rgb(73,163,123);
 }
 
 .menu{
-    margin-left: 1em;
     position: absolute;
+    margin-left: 15px;
     top: 200px;
 }
 
 .links{
-    margin: 2em 1em 0 2em;
+    margin: 30px 15px 0 15px;
 }
 
 .links a{
     display: block;
+    padding-top: 15px;
     text-decoration: none;
     color: black;
-    padding-top: 1em;
 }
 
-.getTouch{
-    margin-bottom: 4em;
-    margin-left: 1em;
+.get-touch{
     position: absolute;
+    margin-bottom: 60px;
+    margin-left: 15px;
     bottom: 20px;
 }
 
-.contactInfo{
-    margin: 2em;
+.contact-info{
+    margin: 10px 15px 0 15px;
     font-size: 0.8em;
 }
 
@@ -85,7 +111,93 @@ nav div input{
     padding: 5px;
 }
 
+.icon-link span{
+    padding-left: 5px;
+}
+
 .all-main{
-    margin-left: 17vw;
-    margin-top: 4em;
+    margin-left: 350px;
+    margin-top: 60px;
+}
+
+.article-1{
+    display: block;
+    height: 500px;
+    margin-top: 50px;
+}
+
+.article-1-body{
+    position: relative;
+    top: 25px;
+}
+
+.article-1 p, .article-2 p{
+    width: 650px;
+    padding-top: 15px;
+}
+
+.article-1 h2, .article-2 h2{
+    font-size: 40px;
+    color: rgb(73,163,123);
+    font-weight: bold;
+}
+
+#img-1{
+    display: block;
+    position: relative;
+    bottom: 350px;
+    left: 700px;
+    border-radius: 15px;
+    border: 1px solid black;
+}
+
+.article-2{
+    height: 300px;
+    margin-bottom: 50px;
+}
+
+.article-2-body{
+    position: relative;
+    left: 700px;
+    bottom: 320px;
+}
+
+.article-2-body button{
+    width: 100px;
+    height: 35px;
+    display: inline-block;
+    padding: 5px 14px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgba(170, 206, 155, 1);
+    color: rgb(55,56,103);
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: medium;
+}
+
+#img-2{
+    border-radius: 15px;
+    border: 1px solid black;
+}
+
+.features h2, .why-trackgenix h2, .contact-us h2{
+    padding-bottom: 10px;
+    font-size: 32px;
+    text-transform: uppercase;
+    width: 1500px;
+    border-bottom: 4px solid rgb(55,56,103);
+}
+
+.features p{
+    width: 1500px;
+}
+
+.features ul{
+    margin: 50px 50px 50px 35px;
+}
+
+.features ul li{
+    padding: 5px;
 }
