--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -9,20 +9,20 @@ body{
 }
 
 nav div input{
-    width: 13vw;
+    width: 250px;
     height: 30px;
     margin-left: 15px;
     margin-bottom: 15px;
-    padding-left: 5px;
+    padding-left: 10px;
     border: none;
     border-radius: 5px;
     color: lightgray;
 }
 
 header{
-    width: 1400px;
+    width: 1024px;
     height: 100px;
-    font-size: 40px;
+    font-size: 60px;
     color: rgb(55,56,103);
     font-weight: bold;
     border-bottom: 5px solid rgb(55,56,103);
@@ -33,7 +33,7 @@ button:active{
 }
 
 footer{
-    width: 1630px;
+    width: 1024px;
     height: 10px;
     margin-left: 290px;
     position: relative;
@@ -48,10 +48,16 @@ footer img{
 
 .sidebar{
     position: fixed;
-    width:  290px;
-    height: 937px;
+    width:  304px;
+    height: 1024px;
     top: 0;
-    background-color: lightgray;
+    background-color: rgba(177, 178, 182, 0.6);
+}
+
+#glass{
+    position: absolute;
+    left: 250px;
+    top: 38px;
 }
 
 .inputButtons{
@@ -77,6 +83,7 @@ footer img{
     text-align: center;
     text-decoration: none;
     font-size: 12px;
+    font-weight: medium;
     text-transform: uppercase;
 }
 
@@ -90,7 +97,6 @@ footer img{
     margin: 15px;
     padding-bottom: 10px;
     text-transform: uppercase;
-    font-weight: bold;
     border-bottom: 2px solid rgb(73,163,123);
 }
 
@@ -101,7 +107,7 @@ footer img{
 }
 
 .links{
-    margin: 30px 15px 0 15px;
+    margin: 20px 15px 0 15px;
 }
 
 .links a{
@@ -132,14 +138,18 @@ footer img{
     padding-left: 5px;
 }
 
+/*end of sidebar, beggining of the main section*/
+
 .all-main{
     margin-left: 350px;
     margin-top: 60px;
 }
 
+/*home section*/
+
 .article-1{
     display: block;
-    height: 500px;
+    height: 400px;
     margin-top: 50px;
 }
 
@@ -149,12 +159,12 @@ footer img{
 }
 
 .article-1 p, .article-2 p{
-    width: 650px;
+    width: 420px;
     padding-top: 15px;
 }
 
 .article-1 h2, .article-2 h2{
-    font-size: 40px;
+    font-size: 30px;
     color: rgb(73,163,123);
     font-weight: bold;
 }
@@ -162,36 +172,37 @@ footer img{
 #img-1{
     display: block;
     position: relative;
-    bottom: 350px;
-    left: 700px;
+    bottom: 250px;
+    left: 500px;
     border-radius: 15px;
     border: 1px solid black;
 }
 
 .article-2{
-    height: 300px;
+    height: 250px;
     margin-bottom: 50px;
 }
 
 .article-2-body{
     position: relative;
-    left: 700px;
-    bottom: 320px;
+    left: 500px;
+    bottom: 220px;
 }
 
-.article-2-body button{
+.article-2-body button, .why-trackgenix button, .contact-us button{
     width: 100px;
     height: 35px;
     display: inline-block;
     padding: 5px 14px;
+    margin-top: 25px;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: rgba(170, 206, 155, 1);
     color: rgb(55,56,103);
     text-align: center;
     text-decoration: none;
     font-size: 12px;
-    font-weight: medium;
+    font-weight: 600;
 }
 
 #img-2{
@@ -199,32 +210,125 @@ footer img{
     border: 1px solid black;
 }
 
+/*features*/
+
 .features h2, .why-trackgenix h2, .contact-us h2{
     padding-bottom: 10px;
-    font-size: 32px;
+    font-size: 36px;
+    font-weight: bold;
     text-transform: uppercase;
-    width: 1500px;
+    width: 1024px;
     border-bottom: 4px solid rgb(55,56,103);
 }
 
 .features p{
-    width: 1500px;
+    margin-top: 25px;
+    width: 1024px;
 }
 
 .features ul{
-    margin: 50px 50px 50px 35px;
+    margin: 50px 50px 50px 100px;
+    list-style-type: square;
+
 }
 
 .features ul li{
     padding: 5px;
 }
 
+.features ul li strong{
+    font-weight: bold;
+}
+
+/*why-trackgenix*/
+
+.why-trackgenix img{
+    width: 413px;
+    height: 173px;
+    object-fit: cover;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+.why-trackgenix p{
+    width: 300px;
+    padding: 15px;
+}
+
+.why-trackgenix h3{
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.article-03, .article-04, .article-05, .article-06{
+    position: relative;
+    display: block;
+    width: 1024px;
+    height: 275px;
+    margin-top: 25px;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+    border-bottom: 1px solid black;
+}
+
+.article-03{
+    top: 25px;
+    padding-left: 50px;
+}
+
+.article-04{
+    top: 50px;
+}
+
+.article-05{
+    top: 75px;
+    padding-left: 100px;
+}
+
+.article-06{
+    top: 100px;
+}
+
+.article-03-body, .article-05-body{
+    display: block;
+    position: relative;
+    left: 400px;
+    width: 350px;
+    bottom: 190px;
+    padding-left: 100px;
+    text-align: center;
+}
+
+.article-04 img, .article-06 img{
+    position: relative;
+    left: 550px;
+    bottom: 230px;
+}
+
+.article-04-body, .article-06-body{
+    display: block;
+    position: relative;
+    left: 15px;
+    width: 330px;
+    bottom: 10px;
+    padding-left: 100px;
+    text-align: center;
+}
+
+.why-trackgenix button{
+    margin-top: 0;
+}
+
+/*contact us*/
+
 .contact-us{
+    margin-top: 200px;
     margin-bottom: 450px;
 }
 
 .contact-us form{
-    width: 600px;
+    margin-top: 30px;
+    width: 400px;
 }
 
 .contact-us input, select, textarea{
@@ -234,29 +338,26 @@ footer img{
     border-radius: 4px;
     margin-top: 6px;
     margin-bottom: 16px;
+    resize: none;
 }
 
-.contact-us button{
-    width: 100px;
-    height: 35px;
-    display: inline-block;
-    padding: 5px 14px;
-    border: none;
-    border-radius: 10px;
-    background-color: rgba(170, 206, 155, 1);
-    color: rgb(55,56,103);
-    text-align: center;
-    text-decoration: none;
-    font-size: 12px;
-    font-weight: medium;
+#button-3{
+    width: 125px;
 }
+
+#button-4{
+    background-color: rgba(177, 178, 182, 0.6);
+    margin-left: 15px;
+}
+
+/*ordered lists*/
 
 .ordered-lists{
     position: absolute;
-    width: 1630px;
-    left: 290px;
+    width: 1150px;
+    left: 304px;
     bottom: 25px;
-    background-color: rgb(55,56,103);
+    background-color: rgba(55,56,103,0.9);
     height: 300px;
     color: white;
 }
@@ -264,8 +365,19 @@ footer img{
 .ordered-lists h3{
     text-transform: uppercase;
     font-size: 32px;
-    margin-left: 25px;
+    font-weight: bold;
+    margin: 40px 0 0 50px;
     padding: 25px 0 0 25px;
+}
+
+.ordered-lists li:hover{
+    transform: scale(1.05);
+}
+
+.ordered-lists h4{
+    padding-bottom: 15px;
+    margin-left: -15px;
+    font-weight: bold;
 }
 
 .products, .company, .support{
@@ -275,15 +387,15 @@ footer img{
 }
 
 .products{
-    left: 450px;
+    left: 400px;
 }
 
 .company{
-    left: 750px;
-    bottom: 140px;
+    left: 600px;
+    bottom: 116px;
 }
 
 .support{
-    left: 1050px;
-    bottom: 280px;
+    left: 800px;
+    bottom: 228px;
 }
