--- a/Semana-03/css/styles.css
+++ b/Semana-03/css/styles.css
@@ -1,8 +1,3 @@
-html{
-    width: 1440px;
-    height: 1024px;
-}
-
 body{
     position: relative;
     box-sizing: border-box;
@@ -54,7 +49,7 @@ footer img{
 .sidebar{
     position: fixed;
     width:  304px;
-    height: 1024px;
+    height: 100vh;
     top: 0;
     background-color: rgba(177, 178, 182, 0.6);
 }
