BaSP-W04-M2022: FInished desktop version (1024 and 1440)

--- a/Semana-04/css/main.css
+++ b/Semana-04/css/main.css
@@ -45,7 +45,7 @@ main{
     justify-content: center;
 }
 
-.article-1 img, .article-2 img, .why-trackgenix img{
+.article-1 img, .article-2 img{
     max-width: 100%;
     object-fit: contain;
     height: fit-content;
@@ -91,7 +91,14 @@ main{
 }
 
 .why-trackgenix img{
-    margin-bottom: 20px;
+    object-fit: cover;
+    height: 172px;
+    width: 100%;
+    margin: 10px 0px;
+    border: 1px solid black;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .article-03, .article-04, .article-05, .article-06{
@@ -154,7 +161,7 @@ main{
 
 .ordered-lists{
     background-color: rgb(55,56,103);
-    height: 15vh;
+    height: 20vh;
     width: 100vw;
     display: flex;
     justify-content: space-around;
@@ -205,21 +212,11 @@ main{
 
 @media (min-width:1024px){
 
-    nav{
-        position: fixed;
-        display: flex;
-        width: 22vw;
-        height: 100vh;
-        box-sizing: border-box;
-        flex-direction: column;
-        padding: 15px;
-        background-color: rgba(177, 178, 182, 0.6);
-    }
-
-    main{
+    .not-ol{
+        width: 75vw;
         margin-left: 25vw;
-        width: 78vw;
         font-size: 16px;
+        overflow-x: hidden;
     }
 
     .article-1 h2, .article-2 h2{
@@ -227,31 +224,23 @@ main{
         padding-bottom: 15px;
     }
 
-
-     .article-1, .article-2{
-        flex-wrap: nowrap;
-    }
-
     .article-2 img{
         order: 1;
-        width: 45%;
     }
 
     .article-1-body{
         text-align: left;
-        padding: 25px 20px 0px 10px;
-        width: 40%;
     }
 
     .article-1 img{
         width: 50%;
-        margin-top: 75px;
+        margin-top: 50px;
     }
 
     .article-2-body{
         order: 2;
         text-align: left;
-        padding: 10px 40px 10px 25px;
+        padding: 0px 40px 10px 25px;
         width: 60%;
     }
 
@@ -264,8 +253,11 @@ main{
         margin-left: 50px;
     }
 
+    /*why-trackgenix*/
+
     .article-03, .article-04, .article-05, .article-06{
         display: flex;
+        justify-content: space-between;
     }
 
     .article-03-body,
@@ -273,20 +265,24 @@ main{
     .article-05-body,
     .article-06-body{
         align-self: center;
-        padding: 0px 20px 0px 10px;
+        width: 100%;
     }
 
     .article-03-body{
         order: 2;
+        padding-left: 20px;
+    }
+
+    .article-04-body, .article-06-body{
+        padding-right: 20px;
     }
 
     .article-05-body{
         order: 6;
+        padding-left: 20px;
     }
-
-    .why-trackgenix img{
-       max-width: 50%;
-    }
+    
+    /*contact us*/
 
     .contact-us h2, .features h2, .why-trackgenix h2{
         text-align: left;
@@ -329,13 +325,14 @@ main{
     .ordered-lists{
         height: 17vw;
         width: 78vw;
-        margin-left: -3vw;
+        margin-left: 22vw;
     }
 
     .ordered-lists div{
         align-self: center;
         margin-bottom: 15px;
         margin-left: -50px;
+        font-size: 16px;
     }
 
 
