--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -15,7 +15,6 @@ nav div input {
     width: 100%;
     height: 30px;
     margin-bottom: 15px;
-    padding-left: 10px;
     border: none;
     border-radius: 5px;
     color: rgba(177, 178, 182, 0.2);
@@ -25,17 +24,12 @@ nav div input {
     background-color: rgb(55,56,103);
 }
 
-.input-buttons {
-    display: flex;
-}
-
 .buttons {
-    margin-top: -550px;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.buttons button {
+.input-buttons button {
     width: 80px;
     height: 30px;
     padding: 10px 14px;
@@ -58,7 +52,7 @@ nav div input {
 }
 
 .menu {
-    margin-top: -500px;
+    margin-top: -400px;
 }
 
 .links {
