BaSP-W04-M2022: Corrections to the sidebar for better adjustment to queries.

--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -1,6 +1,6 @@
 nav {
     position: fixed;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     width: 22vw;
