BaSP-W05-M2022: Corrections to week 04 assignment.

--- a/Semana-04/css/footer.css
+++ b/Semana-04/css/footer.css
@@ -1,8 +1,7 @@
-footer{
-    display: flex;
-    justify-content: center;
+footer {
+    text-align: center;
 }
 
-footer img{
+footer img {
     padding: 5px;
 }
