--- a/Semana-04/css/styles.css
+++ b/Semana-04/css/styles.css
@@ -7,7 +7,6 @@ body {
 }
 
 /* media querys */
-/*tablet*/
 
 @media (min-width:768px) {
 
@@ -23,7 +22,7 @@ body {
     }
 
     .article-1 img {
-        width: 50%;
+        width: 45%;
     }
 
     .article-1-body {
@@ -85,13 +84,21 @@ body {
 
 }
 
-/*desktop*/
-
 @media (min-width:1024px) {
+
+    header {
+        width: 70vw;
+        padding-top: 20px;
+        margin-left: 20px;
+        text-align: left;
+        font-size: 60px;
+    }
 
     nav {
         display: flex;
     }
+
+    /*main*/
 
     .not-ol {
         width: 75vw;
@@ -109,19 +116,18 @@ body {
         order: 1;
     }
 
-    .article-1-body {
-        text-align: left;
+    .article-1 img {
+        margin-top: 50px;
     }
 
-    .article-1 img {
-        width: 50%;
-        margin-top: 50px;
+    .article-2 {
+        margin-left: 20px;
     }
 
     .article-2-body {
         order: 2;
         width: 60%;
-        padding: 0px 40px 10px 25px;
+        padding: 0px 20px 10px 40px;
         text-align: left;
     }
 
@@ -201,15 +207,6 @@ body {
         text-align: left;
     }
 
-    #button-3 {
-        width: 125px;
-    }
-
-    #button-4 {
-        width: 100px;
-        margin-left: -20px;
-    }
-
     /*ordered lists*/
 
     .ordered-lists h3 {
@@ -232,16 +229,5 @@ body {
         margin-bottom: 15px;
         margin-left: -50px;
         font-size: 16px;
-    }
-}
-
-@media (min-width:1024px) {
-
-    header {
-        width: 70vw;
-        padding-top: 20px;
-        margin-left: 20px;
-        text-align: left;
-        font-size: 60px;
     }
 }
