--- a/Semana-06/styles/styles.css
+++ b/Semana-06/styles/styles.css
@@ -230,4 +230,15 @@ body {
         margin-left: -50px;
         font-size: 16px;
     }
+
+    .signup-form{
+        flex-direction: row;
+        flex-wrap: wrap;
+        height: 300px;
+    }
+
+    .form1, .form2{
+        width: 45%;
+        height: 300px;
+    }
 }
